--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
               <div class="w3-center w3-text-white">80%</div>
             </div>
           </div>
-          <p>Powpoint</p>
+          <p>Powerpoint</p>
           <div class="w3-light-grey w3-round-xlarge w3-small">
             <div class="w3-container w3-center w3-round-xlarge w3-teal" style="width:75%">75%</div>
           </div>
